--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -1,27 +1,29 @@
 .navbar {
   display: flex;
+  border: 1px solid black;
   background-color: rgb(219, 203, 148);
 }
 
-.navbar-link {
+.left-navbar-link {
+  flex: 1;
+  border: 1px solid black;
   text-decoration: none;
   font-weight: 700;
   color: aliceblue;
-  margin-left: 1rem;
 }
 
-.navbar-link:hover {
+.left-navbar-link:hover {
   color: rgb(153, 141, 104);
 }
 
-.signup-login-link {
-  margin-left: auto;
-  margin-right: 1rem;
+.right-navbar-link {
   text-decoration: none;
+  border: 1px solid black;
   font-weight: 700;
   color: aliceblue;
+  margin-right: 1rem;
 }
 
-.signup-login-link:hover {
+.right-navbar-link:hover {
   color: rgb(153, 141, 104);
 }
