--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -1,29 +1,30 @@
 .navbar {
   display: flex;
-  border: 1px solid black;
   background-color: rgb(219, 203, 148);
 }
 
-.left-navbar-link {
-  flex: 1;
-  /* border: 1px solid black; */
+.left-navbar-box {
+  /* flex: 1; */
   text-decoration: none;
   font-weight: 700;
   color: aliceblue;
 }
 
-.left-navbar-link:hover {
-  color: rgb(153, 141, 104);
-}
-
-.right-navbar-link {
+.left-link {
+  margin-left: 1rem;
   text-decoration: none;
-  /* border: 1px solid black; */
   font-weight: 700;
   color: aliceblue;
+}
+
+.right-link {
   margin-right: 1rem;
+  text-decoration: none;
+  font-weight: 700;
+  color: aliceblue;
 }
 
-.right-navbar-link:hover {
+.left-link:hover,
+.right-link:hover {
   color: rgb(153, 141, 104);
 }
