fixed dropdown logic bug and parent relationship for word and book

--- a/src/components/wordDefinition/WordDefinition.css
+++ b/src/components/wordDefinition/WordDefinition.css
@@ -42,3 +42,9 @@
   cursor: pointer;
   color: rgb(153, 141, 104);
 }
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .word-definition-box {
+    width: 15rem;
+  }
+}
