--- a/src/pages/searchPage/SearchPage.css
+++ b/src/pages/searchPage/SearchPage.css
@@ -13,3 +13,11 @@
   margin-top: 2rem;
   width: 33rem;
 }
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .searchbar-container {
+    width: 18rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
