--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -1,3 +1,7 @@
+.searchbar {
+  width: 33rem;
+}
+
 .dropdown-list {
   /* background-color: rgb(245, 244, 243); */
   margin: 0 0;
@@ -35,4 +39,3 @@ span {
   color: grey;
   font-style: italic;
 }
-
