completed create book function

--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -1,10 +1,9 @@
-.searchbar {
-  width: 33rem;
+.searchbar-box {
 }
 
 .dropdown-list {
   /* background-color: rgb(245, 244, 243); */
-  margin: 0 0;
+  margin: 0px 0px;
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
   padding-left: 0.5rem;
@@ -15,7 +14,7 @@
 }
 
 .dropdown-list:hover {
-  background-color: rgb(221, 206, 192);
+  background-color: rgb(238, 230, 223);
   cursor: pointer;
 }
 
