--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -1,3 +1,17 @@
 .sidebar-container {
-  
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.add-book-btn {
+  border: 0.375px solid lightgray;
+  margin-top: 1rem;
+  padding: 0 1rem 0.2rem 1rem;
+  border-radius: 0.375rem;
+}
+
+.add-book-btn:hover {
+  background-color: rgb(238, 230, 223);
+  cursor: pointer;
 }
