--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -2,20 +2,25 @@
 
 .main-container {
   /* background-image: var(--gradient-6); */
-  height: 95.5vh;
   width: 100%;
   display: flex;
-  flex-flow: row;
+}
+
+.right-container {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
 .searchbar-container {
-  width: 100%;
-  padding: 4rem 4rem;
+  margin-top: 2.5rem;
+  width: 23rem;
 }
 
 .sidebar-container {
   border-right: 0.375px lightgray solid;
-  width: 3rem;
+  width: 6rem;
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
