--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column;
   align-items: center;
+  padding: 0rem 0.4rem 0rem 0.4rem;
 }
 
 .add-book-btn {
@@ -14,4 +15,38 @@
 .add-book-btn:hover {
   background-color: rgb(238, 230, 223);
   cursor: pointer;
+}
+
+.book-tab {
+  display: flexbox;
+  flex-flow: column;
+  margin-top: 0.7rem;
+}
+
+.tab {
+  text-align: center;
+  border-top: 0.375px solid lightgray;
+  border-right: 0.375px solid lightgray;
+  border-left: 0.375px solid lightgray;
+  padding: 0.4rem;
+  gap: 3px;
+  /* background-color: rgb(255, 246, 234); */
+  font-weight: 500;
+  color: rgb(92, 92, 92);
+}
+
+.tab:hover {
+  cursor: pointer;
+  background-color: rgb(238, 230, 223);
+}
+
+.tab:first-child {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+
+.tab:last-child {
+  border-bottom-left-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+  border-bottom: 0.375px solid lightgray;
 }
