--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -1,4 +1,19 @@
 .searchbar-box {
+  margin: 0.5rem 0 0.5rem 0;
+}
+
+input {
+  border: 0.375px solid lightgray;
+  padding: 0.2rem 0.5rem 0.2rem 0.6rem;
+  border-radius: 0.375rem;
+  width: 18rem;
+}
+
+input:focus {
+  /* border: 2px solid #719ece;
+  box-shadow: 0 0 1px #719ece; */
+  outline: rgb(238, 230, 223) 3px solid;
+  /* b8cee9 */
 }
 
 .dropdown-list {
@@ -20,6 +35,11 @@
 
 .dropdown-box {
   margin-top: 0.27rem;
+  position: absolute;
+  display: block;
+  z-index: 1;
+  background-color: white;
+  width: 18rem;
 }
 
 .dropdown-list:nth-child(1) {
