--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  padding: 0rem 0.4rem 0rem 0.4rem;
+  border-right: 0.375px solid lightgray;
 }
 
 .add-book-btn {
@@ -17,10 +17,10 @@
   cursor: pointer;
 }
 
-.book-tab {
-  display: flexbox;
+.book-tab-box {
+  display: flex;
   flex-flow: column;
-  margin-top: 0.7rem;
+  padding: 0.8rem 1rem 0 1rem;
 }
 
 .tab {
@@ -50,3 +50,5 @@
   border-bottom-right-radius: 0.375rem;
   border-bottom: 0.375px solid lightgray;
 }
+
+
