--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -4,6 +4,7 @@
   /* background-image: var(--gradient-6); */
   width: 100%;
   display: flex;
+  height: 100vh;
 }
 
 .right-container {
@@ -13,13 +14,9 @@
   align-items: center;
 }
 
-.searchbar-container {
-  margin-top: 2.5rem;
-  width: 23rem;
-}
-
 .sidebar-container {
-  width: fit-content;
+  height: 100vh;
+  width: 17rem;
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
@@ -28,4 +25,11 @@
     padding-left: 2rem;
     padding-right: 2rem;
   }
+}
+
+.ultimate-bottom {
+  position: sticky;
+  margin-top: auto;
+  /* border: 1px solid black; */
+  width: 100%;
 }
