--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -33,3 +33,51 @@
   /* border: 1px solid black; */
   width: 100%;
 }
+
+.tabs-selection {
+  width: 100%;
+  padding: 0.3rem 0.3rem 0rem 0.3rem;
+  background-color: rgb(241, 239, 232);
+  display: flex;
+}
+
+.tab-option {
+  /* background-color: rgb(253, 250, 243); */
+  font-weight: 600;
+  color: rgb(92, 92, 92);
+  width: fit-content;
+  padding: 0.2rem 0.35rem 0.2rem 0.35rem;
+  border-radius: 0.375rem;
+  background-color: white;
+  display: flex;
+  flex-flow: column-reverse;
+  align-items: center;
+}
+
+.tab-option:hover {
+  cursor: pointer;
+  background-color: rgb(238, 230, 223);
+}
+
+.active-tab-option {
+  width: 80%;
+  height: 0.25rem;
+  margin-top: 0.25rem;
+}
+
+.hidden {
+  line-height: 0;
+  text-decoration: none;
+  color: transparent;
+}
+
+.hidden:hover {
+  cursor: pointer;
+}
+
+.singular-tab {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  margin-right: 0.3rem;
+}
