--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -31,6 +31,7 @@ input:focus {
 .dropdown-list:hover {
   background-color: rgb(238, 230, 223);
   cursor: pointer;
+
 }
 
 .dropdown-box {
@@ -40,16 +41,17 @@ input:focus {
   z-index: 1;
   background-color: white;
   width: 18rem;
+  border-radius: 0.375rem;
 }
 
 .dropdown-list:nth-child(1) {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
 }
 
 .dropdown-list:last-child {
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
   border-bottom: 0.1rem solid lightgrey;
 }
 
