--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -1,22 +1,33 @@
 @import "https://unpkg.com/open-props/gradients.min.css";
 
 .main-container {
-  /* background-image: var(--gradient-6); */
-  width: 100%;
   display: flex;
   height: 100vh;
+  max-width: 100%;
 }
 
-.right-container {
+.right-main-box {
   width: 100%;
   display: flex;
   flex-flow: column;
-  align-items: center;
+  /* border: 1px solid black; */
+  /* position: relative; */
+  transition: 0.6s;
 }
 
 .sidebar-container {
-  height: 100vh;
-  width: 17rem;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  border-right: 0.375px solid lightgray;
+  /* min-width: 17rem;
+  width: fit-content; */
+  width: 0;
+  position: relative;
+  z-index: 1;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.6s;
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
@@ -27,21 +38,16 @@
   }
 }
 
-.ultimate-bottom {
-  position: sticky;
-  margin-top: auto;
-  /* border: 1px solid black; */
-  width: 100%;
-}
-
 .tabs-selection {
   width: 100%;
-  max-width: 62.9rem;
+  /* width: calc(); */
+  height: fit-content;
   padding: 0.3rem 0.3rem 0rem 0.3rem;
   background-color: rgb(241, 239, 232);
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
+  /* transition: margin-left 0.5s; */
 }
 
 .tab-option {
