--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -13,17 +13,18 @@
 .book-tab-box {
   display: flex;
   flex-flow: column;
-  padding: 0.8rem 1rem 0 1rem;
+  height: 25rem;
+  overflow: auto;
+  overflow-wrap: break-word;
+  border: 0.375px solid lightgray;
+  margin: 0.6rem 0.2rem 0.3rem 0.2rem;
+  border-radius: 0.375rem;
 }
 
 .tab {
-  text-align: center;
-  border-top: 0.375px solid lightgray;
-  border-right: 0.375px solid lightgray;
-  border-left: 0.375px solid lightgray;
-  padding: 0.4rem;
   gap: 3px;
-  /* background-color: rgb(255, 246, 234); */
+  border-bottom: 0.375px solid lightgray;
+  padding: 0.4rem 0.6rem 0.4rem 0.6rem;
   font-weight: 500;
   color: rgb(92, 92, 92);
 }
@@ -34,12 +35,9 @@
 }
 
 .tab:first-child {
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
+  border-bottom: 0.375px solid lightgray;
 }
 
 .tab:last-child {
-  border-bottom-left-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
-  border-bottom: 0.375px solid lightgray;
+  border-bottom: none;
 }
