--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -2,7 +2,7 @@
 
 .main-container {
   display: flex;
-  height: 100vh;
+  height: 87vh;
   max-width: 100%;
 }
 
@@ -10,9 +10,8 @@
   width: 100%;
   display: flex;
   flex-flow: column;
-  /* border: 1px solid black; */
-  /* position: relative; */
-  transition: 0.6s;
+  transition: transform 0.6s ease-out;
+  align-items: center;
 }
 
 .sidebar-container {
@@ -20,14 +19,16 @@
   flex-flow: column;
   align-items: center;
   border-right: 0.375px solid lightgray;
-  /* min-width: 17rem;
-  width: fit-content; */
-  width: 0;
-  position: relative;
-  z-index: 1;
-  left: 0;
-  overflow-x: hidden;
-  transition: 0.6s;
+  height: 100%;
+  min-width: 17rem;
+  width: fit-content;
+  position: absolute;
+  /* width: 0; */
+  /* z-index: 1; */
+  /* left: 0; */
+  /* overflow-x: hidden; */
+  transition: transform 0.6s;
+  transform: translateX(-100%);
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
@@ -47,7 +48,6 @@
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
-  /* transition: margin-left 0.5s; */
 }
 
 .tab-option {
@@ -84,8 +84,4 @@
   margin-right: 0.3rem;
   margin-top: 0.13rem;
   width: fit-content;
-}
-
-::-webkit-scrollbar {
-  height: 0.1px;
 }
