--- a/src/components/wordDefinition/WordDefinition.css
+++ b/src/components/wordDefinition/WordDefinition.css
@@ -2,7 +2,7 @@
   width: 28rem;
   border-radius: 0.5rem;
   margin-top: 3rem;
-  border: 0.1rem lightgrey solid;
+  border: 0.375px lightgrey solid;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
   padding-left: 0.8rem;
