--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -2,7 +2,7 @@
 
 .main-container {
   display: flex;
-  height: 87vh;
+  height: 90vh;
   max-width: 100%;
 }
 
@@ -18,7 +18,7 @@
   flex-flow: column;
   align-items: center;
   border-right: 0.375px solid lightgray;
-  height: 100%;
+  height: 90vh;
   min-width: 17rem;
   width: fit-content;
   position: absolute;
@@ -26,7 +26,7 @@
   /* z-index: 1; */
   /* left: 0; */
   /* overflow-x: hidden; */
-  transition: transform 0.4s;
+  transition: transform 0.3s;
   transform: translateX(-100%);
 }
 
@@ -39,12 +39,13 @@
 .tabs-selection {
   width: 100%;
   /* width: calc(); */
-  height: fit-content;
+  height: 2.9rem;
   padding: 0.3rem 0.3rem 0rem 0.3rem;
   background-color: rgb(241, 239, 232);
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
+  /* border: 1px solid red; */
 }
 
 .tab-option {
@@ -69,7 +70,9 @@
   height: 0.25rem;
   margin-top: 0.25rem;
   background-color: rgb(241, 239, 232);
+  /* border: 1px solid orange; */
 }
+
 .active-tab-option:hover {
   cursor: pointer;
 }
@@ -81,6 +84,9 @@
   margin-right: 0.3rem;
   margin-top: 0.13rem;
   width: fit-content;
+  /* max-height: 3.1rem; */
+  /* border: 1px solid black; */
+  /* padding-bottom: 0; */
 }
 
 .definition-container {
@@ -88,7 +94,7 @@
   justify-content: center;
 }
 
-.mobile-hidden {
+/* .mobile-hidden {
   background-color: rgba(0, 0, 0, 0.16);
   transition: background-color 0.3s;
 }
@@ -96,4 +102,10 @@
 .mobile-active-hidden {
   background-color: rgba(241, 239, 232, 0.16);
   transition: background-color 0.3s;
+} */
+
+.selected-active-tab {
+  background-color: gray;
+  border-radius: 0.375rem 0.375rem 0 0;
+  padding: 0;
 }
