--- a/src/pages/wordPage/WordPage.css
+++ b/src/pages/wordPage/WordPage.css
@@ -13,6 +13,7 @@
   margin: 0rem 0rem 2rem 2rem;
   width: fit-content;
   min-width: 18rem;
+  max-width: 27rem;
   height: fit-content;
   min-height: 8rem;
   border-radius: 0.5rem;
