--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -37,7 +37,7 @@ input:focus {
   margin-top: 0.27rem;
   position: absolute;
   display: block;
-  z-index: 1;
+  z-index: 4;
   background-color: white;
   width: 18rem;
   border-radius: 0.375rem;
@@ -61,7 +61,8 @@ span {
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
-  input, .dropdown-box {
+  input,
+  .dropdown-box {
     width: 10rem;
   }
 }
