--- a/src/components/modal/SignUpPopover.scss
+++ b/src/components/modal/SignUpPopover.scss
@@ -40,46 +40,41 @@
 }
 
 .login-btn {
-  /* border: 0.375px solid lightgray; */
   padding: 0.3rem 0.5rem 0.3rem 0.5rem;
-  margin-top: 0.7rem;
-  // margin-left: 0.6rem;
+  margin-left: auto;
   border-radius: 0.375rem;
   font-weight: 600;
   background-color: rgb(211, 198, 155);
   color: white;
-  // width: 100%;
-  // display: flex;
-  // justify-content: center;
-
+  display: flex;
+  align-items: center;
 }
 
 .cancel-btn {
   border: 0.375px solid lightgray;
   padding: 0.3rem 0.5rem 0.3rem 0.5rem;
-  margin-top: 0.7rem;
-  // margin-left: 0.6rem;
   border-radius: 0.375rem;
   font-weight: 600;
   color: rgb(119, 119, 119);
 }
 
 .signup-link {
-  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
-  margin-top: 0.7rem;
-  // margin-right: 0.45rem;
+  margin-top: 0.1rem;
   font-weight: 600;
   color: $web-font-color;
-  // border-radius: 0.375rem;
-  // border: 0.375px solid lightgray;
+  font-size: 10px;
+}
 
+.links-container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
 }
 
 .signup-link:hover {
   cursor: pointer;
-  // background-color: $secondary-web-color;
   text-decoration: underline;
-  // transition: text-decoration 4s ease-in;
 }
 
 .login-btn:hover {
@@ -104,6 +99,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  padding-top: 0.5rem;
 }
 
 .switch-signup-link {
@@ -133,20 +129,21 @@
 }
 
 .popover-box {
-  /* width: 13rem; */
-  padding: 0.1rem 0.9rem 0.1rem 0.9rem;
+  padding: 0.1rem 0.6rem 0.1rem 0.6rem;
   display: flex;
   flex-flow: column;
   align-items: center;
+  width: 12.6rem;
+  max-width: 12.6rem;
 }
-
-// #signup_form_control:focus, #_signup_form_control:focus, #signup_form_control1:focus, #signup_form_control2:focus, #signup_form_control3:focus, #signup_form_control4:focus {
-//   outline: rgb(238, 230, 223) 3px solid;
-//   border-color: rgb(238, 230, 223);
-//   box-shadow: none;
-// }
-
 
 .popover-container {
   z-index: 4;
+}
+
+#signup-loading-spinner {
+  height: 16px;
+  width: 16px;
+  font-size: 11px;
+  margin-right: 0.3rem;
 }
