--- a/src/pages/wordPage/WordPage.scss
+++ b/src/pages/wordPage/WordPage.scss
@@ -1,12 +1,14 @@
 .word-container {
   width: 100%;
-  height: 85vh;
+  // height: 85vh;
   overflow-y: auto;
-  /* border: 1px solid black; */
+  //  border: 1px solid black; 
+  // overflow: hidden;
   padding: 2rem;
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
+  
 }
 
 .word-page-definition-box {
