--- a/src/components/modal/SignUpPopover.scss
+++ b/src/components/modal/SignUpPopover.scss
@@ -59,7 +59,7 @@
   color: rgb(119, 119, 119);
 }
 
-.signup-link {
+.popover-state-link, ._popover-state-link {
   margin-top: 0.1rem;
   font-weight: 600;
   color: $web-font-color;
@@ -73,7 +73,7 @@
   width: 100%;
 }
 
-.signup-link:hover {
+.popover-state-link:hover, ._popover-state-link:hover {
   cursor: pointer;
   text-decoration: underline;
 }
@@ -110,6 +110,7 @@
   font-weight: 600;
   color: $web-font-color;
 }
+
 .switch-signup-link:hover {
   text-decoration: underline;
   cursor: pointer;
@@ -147,6 +148,26 @@
   width: 16px;
   font-size: 11px;
   margin-right: 0.3rem;
+}
+
+.verified-text {
+  color: $web-font-color;
+  display: flex;
+  align-items: center;
+}
+
+#confirm-email-loading-spinner {
+  height: 20px;
+  width: 20px;
+  font-size: 11px;
+  margin-right: 0.3rem;
+  color: $web-font-color;
+}
+
+._popover-state-link {
+  margin-left: 0.2rem;
+  font-size: 12.6px;
+  margin-top: 0;
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
