--- a/src/components/modal/SignUpPopover.scss
+++ b/src/components/modal/SignUpPopover.scss
@@ -69,7 +69,7 @@
 .links-container {
   display: flex;
   flex-flow: column;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
 }
 
