--- a/src/components/modal/SignUpPopover.scss
+++ b/src/components/modal/SignUpPopover.scss
@@ -180,38 +180,38 @@
   }
 }
 
-// .test_popover-container {
-//   background-color: rgb(255, 252, 252);
-//   width: 14rem;
-//   max-width: fit-content;
-//   border: 0.1rem solid lightgray;
-//   border-radius: 0.375rem;
-//   height: fit-content;
-//   display: flex;
-//   padding: 0.8rem;
-//   position: absolute;
-//   right: 1.2rem;
-//   margin-top: 1.2rem;
-//   visibility: hidden;
-// }
+.test_popover-container {
+  background-color: rgb(255, 252, 252);
+  width: 14rem;
+  max-width: fit-content;
+  border: 0.1rem solid lightgray;
+  border-radius: 0.375rem;
+  height: fit-content;
+  display: flex;
+  padding: 0.8rem;
+  position: absolute;
+  right: 1.2rem;
+  margin-top: 1.2rem;
+  visibility: hidden;
+}
 
-// .test_popover-container:before {
-//   position: absolute;
-//   content: "";
-//    // note
-//    transition-duration: 0.3s;
-//    transition-property: transform;
-// }
+.test_popover-container:before {
+  position: absolute;
+  content: "";
+   // note
+   transition-duration: 0.3s;
+   transition-property: transform;
+}
 
-// .test_popover-wrapper:hover .test_popover-container {
-//   z-index: 4;
-//   opacity: 1;
-//   visibility: visible;
-//   transform: translate(0, -20px);
-//   // transition: all 0.5s cubic-bezier(0.75, -0.02, 0.2, 0.97);
-// }
+.test_popover-wrapper:hover .test_popover-container {
+  z-index: 4;
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0, -20px);
+  // transition: all 0.5s cubic-bezier(0.75, -0.02, 0.2, 0.97);
+}
 
-// .test_popover-wrapper {
-//   display: inline-block;
-//   // border: 1px solid black;
-// }
+.test_popover-wrapper {
+  display: inline-block;
+  // border: 1px solid black;
+}
