--- a/src/components/sideNavBar/SideNavBar.scss
+++ b/src/components/sideNavBar/SideNavBar.scss
@@ -42,3 +42,9 @@
 .tab:last-child {
   border-bottom: none;
 }
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .book-tab-box {
+    max-width: 9rem;
+  }
+}
