--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -28,13 +28,6 @@
   transform: translateX(-100%);
 }
 
-@media screen and (min-width: 280px) and (max-width: 768px) {
-  .sidebar-container {
-    min-width: 12rem;
-  }
-
-}
-
 .tabs-selection {
   width: 100%;
   /* width: calc(); */
@@ -94,4 +87,53 @@
   background-color: gray;
   border-radius: 0.375rem 0.375rem 0 0;
   padding: 0;
+}
+._sidebar {
+  transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -o-transform: translateX(0);
+}
+
+._container-open {
+  transition: width 0.301s, margin-left 0.3s;
+  -webkit-transition: width 0.301s, margin-left 0.3s;
+  -moz-transition: width 0.301s, margin-left 0.3s;
+  -o-transition: width 0.301s, margin-left 0.3s;
+}
+
+._container-close {
+  transition: margin-left 0.3s;
+  -webkit-transition: margin-left 0.3s;
+  -moz-transition: margin-left 0.3s;
+  -o-transition: margin-left 0.3s;
+}
+
+._definition-open {
+  transform: "translateX(100%)";
+  -webkit-transform: "translateX(100%)";
+  -moz-transform: "translateX(100%)";
+  -o-transform: "translateX(100%)";
+  transition: "transform 0.3s";
+  -webkit-transition: "transform 0.3s";
+  -moz-transition: "transform 0.3s";
+  -o-transition: "transform 0.3s";
+}
+
+._definition-close {
+  transform: "translateX(0)";
+  -webkit-transform: "translateX(0)";
+  -moz-transform: "translateX(0)";
+  -o-transform: "translateX(0)";
+  transition: "transform 0.3s";
+  -webkit-transition: "transform 0.3s";
+  -moz-transition: "transform 0.3s";
+  -o-transition: "transform 0.3s";
+}
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .sidebar-container {
+    min-width: 12rem;
+  }
+
 }
