--- a/src/pages/wordPage/WordPage.scss
+++ b/src/pages/wordPage/WordPage.scss
@@ -1,13 +1,20 @@
+@use "../../variables" as *;
+
 .word-container {
   width: 100%;
-  // height: 85vh;
   overflow-y: auto;
-  // overflow: hidden;
   padding: 2rem;
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
   
+}
+
+.loading-spinner {
+  margin-top: 1.5rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .word-page-definition-box {
@@ -23,4 +30,28 @@
   padding-bottom: 0.6rem;
   padding-left: 0.8rem;
   padding-right: 0.8rem;
+}
+
+.no-words {
+  font-weight: 600;
+  color: $web-font-color;
+}
+
+// for normal phones
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  // .word-container {
+  //   justify-content: center;
+  // }
+
+  .word-page-definition-box {
+    margin: 0rem 0rem 2rem 0rem;
+  }
+}
+
+// for fold
+@media screen and (min-width: 0px) and (max-width: 280px) {
+  .word-page-definition-box {
+    min-width: 13.5rem;
+    max-width: 13.5rem;
+  }
 }
