--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -15,9 +15,19 @@ input:focus {
   outline: rgb(238, 230, 223) 3px solid;
   border-color: rgb(238, 230, 223);
   box-shadow: none;
+  border-radius: 0.375rem;
   -webkit-outline: rgb(238, 230, 223) 3px solid;
   -webkit-border-color: rgb(238, 230, 223);
   -webkit-box-shadow: none;
+  -webkit-border-radius: 0.375rem;
+  -moz-outline: rgb(238, 230, 223) 3px solid;
+  -moz-border-color: rgb(238, 230, 223);
+  -moz-box-shadow: none;
+  -moz-border-radius: 0.375rem;
+  -o-outline: rgb(238, 230, 223) 3px solid;
+  -o-border-color: rgb(238, 230, 223);
+  -o-box-shadow: none;
+  -o-border-radius: 0.375rem;
   
 }
 
