--- a/src/components/sideNavBar/SideNavBar.scss
+++ b/src/components/sideNavBar/SideNavBar.scss
@@ -14,6 +14,8 @@
   display: flex;
   flex-flow: column;
   height: fit-content;
+  min-width: 14rem;
+  max-width: 14rem;
   max-height: 25rem;
   overflow: auto;
   overflow-wrap: break-word;
@@ -43,8 +45,16 @@
   border-bottom: none;
 }
 
-@media screen and (min-width: 280px) and (max-width: 768px) {
+// @media screen and (min-width: 280px) and (max-width: 768px) {
+//   .book-tab-box {
+//     max-width: 15rem;
+//   }
+// }
+
+// for fold
+@media screen and (min-width: 0px) and (max-width: 280px) {
   .book-tab-box {
     max-width: 9rem;
+    min-width: 9rem;
   }
 }
