--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -110,25 +110,25 @@
 }
 
 ._definition-open {
-  transform: "translateX(100%)";
-  -webkit-transform: "translateX(100%)";
-  -moz-transform: "translateX(100%)";
-  -o-transform: "translateX(100%)";
-  transition: "transform 0.3s";
-  -webkit-transition: "transform 0.3s";
-  -moz-transition: "transform 0.3s";
-  -o-transition: "transform 0.3s";
+  transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  -moz-transform: translateX(100%);
+  -o-transform: translateX(100%);
+  transition: transform 0.3s;
+  -webkit-transition: transform 0.3s;
+  -moz-transition: transform 0.3s;
+  -o-transition: transform 0.3s;
 }
 
 ._definition-close {
-  transform: "translateX(0)";
-  -webkit-transform: "translateX(0)";
-  -moz-transform: "translateX(0)";
-  -o-transform: "translateX(0)";
-  transition: "transform 0.3s";
-  -webkit-transition: "transform 0.3s";
-  -moz-transition: "transform 0.3s";
-  -o-transition: "transform 0.3s";
+  transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -o-transform: translateX(0);
+  transition: transform 0.3s;
+  -webkit-transition: transform 0.3s;
+  -moz-transition: transform 0.3s;
+  -o-transition: transform 0.3s;
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
