--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -79,7 +79,7 @@
 }
 
 .definition-container {
-  display: flexbox;
+  display: flex;
   justify-content: center;
 }
 
@@ -96,10 +96,10 @@
 }
 
 ._container-open {
-  transition: width 0.301s, margin-left 0.3s;
-  -webkit-transition: width 0.301s, margin-left 0.3s;
-  -moz-transition: width 0.301s, margin-left 0.3s;
-  -o-transition: width 0.301s, margin-left 0.3s;
+  transition: width 0.3s, margin-left 0.3s;
+  -webkit-transition: width 0.3s, margin-left 0.3s;
+  -moz-transition: width 0.3s, margin-left 0.3s;
+  -o-transition: width 0.3s, margin-left 0.3s;
 }
 
 ._container-close {
