feat: added postUser api

--- a/src/components/modal/SignUpPopover.scss
+++ b/src/components/modal/SignUpPopover.scss
@@ -182,10 +182,10 @@
 }
 
 .popover-container {
-  background-color: rgb(255, 252, 252);
+  background-color: rgb(255, 254, 254);
   width: 14rem;
   max-width: fit-content;
-  border: 0.1rem solid lightgray;
+  border: 0.375px solid lightgray;
   border-radius: 0.375rem;
   height: fit-content;
   display: flex;
