--- a/src/pages/wordPage/WordPage.scss
+++ b/src/pages/wordPage/WordPage.scss
@@ -3,14 +3,17 @@
 .word-container {
   width: 100%;
   overflow-y: auto;
-  padding: 2rem;
+  padding: 2rem 1rem 0rem 1rem;
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .justify-center {
   justify-content: center;
+  align-items: center;
 }
 
 .loading-spinner {
@@ -21,7 +24,7 @@
 }
 
 .word-page-definition-box {
-  margin: 0rem 0rem 2rem 2rem;
+  margin: 1rem;
   width: fit-content;
   min-width: 18rem;
   max-width: 27rem;
@@ -40,23 +43,30 @@
   color: $web-font-color;
 }
 
-// for normal phones
-@media screen and (min-width: 541px) and (max-width: 768px) {
+@media screen and (min-width: 540px) and (max-width: 767px) {
   .word-container {
     justify-content: center;
+    padding: 1rem 0rem 0rem 0rem;
   }
 
   .word-page-definition-box {
-    margin: 0rem 0rem 2rem 0rem;
+    margin: 1rem;
   }
 }
 
 
-@media screen and (min-width: 280px) and (max-width: 541px) {
+@media screen and (min-width: 280px) and (max-width: 540px) {
   .word-page-definition-box {
-    max-width: 12.5rem;
-    min-width: 12.5rem;
+    max-width: 17.5rem;
+    min-width: 17.5rem;
+    
   }
+  .word-container {
+    justify-content: center;
+    padding: 1rem 0rem 0rem 0rem;
+    
+  }
+
 }
 
 
@@ -66,5 +76,6 @@
   .word-page-definition-box {
     min-width: 13.5rem;
     max-width: 13.5rem;
+   
   }
 }
