support: bugfix attempt

--- a/src/components/modal/SignUpPopover.scss
+++ b/src/components/modal/SignUpPopover.scss
@@ -226,9 +226,9 @@
   display: inline-block;
 }
 
-.popover-wrapper:hover .popover-container {
-  z-index: 5;
-  opacity: 1;
-  visibility: visible;
-}
+// .popover-wrapper:hover .popover-container {
+//   z-index: 5;
+//   opacity: 1;
+//   visibility: visible;
+// }
 
