--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -1,6 +1,5 @@
-@use '../../variables' as *;
+@use "../../variables" as *;
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
-
 
 .top-navbar {
   background-color: $web-color;
@@ -48,6 +47,11 @@
   padding-left: 0.7rem;
 }
 
+.books-tab-button {
+  margin-left: auto;
+  margin-right: 0.8rem;
+}
+
 .arrow-head-box {
   background-color: rgb(255, 247, 232);
   font-size: 1.3rem;
@@ -77,6 +81,65 @@
   color: rgb(192, 181, 161);
 }
 
+//? for tabs selection
+.tabs-selection {
+  width: 100%;
+  /* width: calc(); */
+  height: 2.9rem;
+  padding: 0.3rem 0.3rem 0rem 0.3rem;
+  background-color: rgb(241, 239, 232);
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.singular-tab {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  margin-right: 0.3rem;
+  margin-top: 0.13rem;
+  width: fit-content;
+}
+
+.tab-option {
+  /* background-color: rgb(253, 250, 243); */
+  font-weight: 600;
+  color: rgb(92, 92, 92);
+  padding: 0.2rem 0.35rem 0.2rem 0.35rem;
+  border-radius: 0.375rem;
+  background-color: white;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.tab-option:hover {
+  cursor: pointer;
+  background-color: rgb(238, 230, 223);
+}
+
+.active-tab-option {
+  width: 80%;
+  height: 0.25rem;
+  margin-top: 0.25rem;
+  background-color: rgb(241, 239, 232);
+  /* border: 1px solid orange; */
+}
+
+.active-tab-option:hover {
+  cursor: pointer;
+}
+
+.selected-active-tab {
+  background-color: gray;
+  border-radius: 0.375rem 0.375rem 0 0;
+  padding: 0;
+}
+
+//? end of tabs selection
+
 @media screen and (min-width: 280px) and (max-width: 768px) {
   .right-box {
     // visibility: hidden;
@@ -85,6 +148,6 @@
   }
 
   .left-box {
-    padding-left: 0.2rem
+    padding-left: 0.2rem;
   }
 }
