--- a/src/components/sideNavBar/SideNavBar.scss
+++ b/src/components/sideNavBar/SideNavBar.scss
@@ -1,49 +1,49 @@
-.add-book-btn {
-  border: 0.375px solid lightgray;
-  margin-top: 1rem;
-  padding: 0 1rem 0.2rem 1rem;
-  border-radius: 0.375rem;
-}
+// .add-book-btn {
+//   border: 0.375px solid lightgray;
+//   margin-top: 1rem;
+//   padding: 0 1rem 0.2rem 1rem;
+//   border-radius: 0.375rem;
+// }
 
-.add-book-btn:hover {
-  background-color: rgb(238, 230, 223);
-  cursor: pointer;
-}
+// .add-book-btn:hover {
+//   background-color: rgb(238, 230, 223);
+//   cursor: pointer;
+// }
 
-.book-tab-box {
-  display: flex;
-  flex-flow: column;
-  height: fit-content;
-  min-width: 14rem;
-  max-width: 14rem;
-  max-height: 25rem;
-  overflow: auto;
-  overflow-wrap: break-word;
-  border: 0.375px solid lightgray;
-  margin: 0.6rem 0.2rem 0.3rem 0.2rem;
-  border-radius: 0.375rem;
-}
+// .book-tab-box {
+//   display: flex;
+//   flex-flow: column;
+//   height: fit-content;
+//   min-width: 14rem;
+//   max-width: 14rem;
+//   max-height: 25rem;
+//   overflow: auto;
+//   overflow-wrap: break-word;
+//   border: 0.375px solid lightgray;
+//   margin: 0.6rem 0.2rem 0.3rem 0.2rem;
+//   border-radius: 0.375rem;
+// }
 
-.tab {
-  gap: 3px;
-  border-bottom: 0.375px solid lightgray;
-  padding: 0.4rem 0.6rem 0.4rem 0.6rem;
-  font-weight: 500;
-  color: rgb(92, 92, 92);
-}
+// .tab {
+//   gap: 3px;
+//   border-bottom: 0.375px solid lightgray;
+//   padding: 0.4rem 0.6rem 0.4rem 0.6rem;
+//   font-weight: 500;
+//   color: rgb(92, 92, 92);
+// }
 
-.tab:hover {
-  cursor: pointer;
-  background-color: rgb(238, 230, 223);
-}
+// .tab:hover {
+//   cursor: pointer;
+//   background-color: rgb(238, 230, 223);
+// }
 
-.tab:first-child {
-  border-bottom: 0.375px solid lightgray;
-}
+// .tab:first-child {
+//   border-bottom: 0.375px solid lightgray;
+// }
 
-.tab:last-child {
-  border-bottom: none;
-}
+// .tab:last-child {
+//   border-bottom: none;
+// }
 
 // @media screen and (min-width: 280px) and (max-width: 768px) {
 //   .book-tab-box {
