--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -8,8 +8,9 @@
 
 .right-main-box {
   display: flex;
-  flex-flow: column;
-  align-items: center;
+  width: 100%;
+  // flex-flow: column;
+  // align-items: center;
 }
 
 .sidebar-container {
@@ -28,112 +29,57 @@
   transform: translateX(-100%);
 }
 
-.tabs-selection {
-  width: 100%;
-  /* width: calc(); */
-  height: 2.9rem;
-  padding: 0.3rem 0.3rem 0rem 0.3rem;
-  background-color: rgb(241, 239, 232);
-  display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
-  /* border: 1px solid red; */
-}
-
-.tab-option {
-  /* background-color: rgb(253, 250, 243); */
-  font-weight: 600;
-  color: rgb(92, 92, 92);
-  padding: 0.2rem 0.35rem 0.2rem 0.35rem;
-  border-radius: 0.375rem;
-  background-color: white;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-}
-
-.tab-option:hover {
-  cursor: pointer;
-  background-color: rgb(238, 230, 223);
-}
-
-.active-tab-option {
-  width: 80%;
-  height: 0.25rem;
-  margin-top: 0.25rem;
-  background-color: rgb(241, 239, 232);
-  /* border: 1px solid orange; */
-}
-
-.active-tab-option:hover {
-  cursor: pointer;
-}
-
-.singular-tab {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  margin-right: 0.3rem;
-  margin-top: 0.13rem;
-  width: fit-content;
-}
-
 .definition-container {
   display: flex;
   justify-content: center;
 }
 
-.selected-active-tab {
-  background-color: gray;
-  border-radius: 0.375rem 0.375rem 0 0;
-  padding: 0;
-}
-._sidebar {
-  transform: translateX(0);
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -o-transform: translateX(0);
-}
 
-._container-open {
-  transition: width 0.3s, margin-left 0.3s;
-  -webkit-transition: width 0.3s, margin-left 0.3s;
-  -moz-transition: width 0.3s, margin-left 0.3s;
-  -o-transition: width 0.3s, margin-left 0.3s;
-}
+// ._sidebar {
+//   transform: translateX(0);
+//   -webkit-transform: translateX(0);
+//   -moz-transform: translateX(0);
+//   -o-transform: translateX(0);
+// }
 
-._container-close {
-  transition: margin-left 0.3s;
-  -webkit-transition: margin-left 0.3s;
-  -moz-transition: margin-left 0.3s;
-  -o-transition: margin-left 0.3s;
-}
+// ._container-open {
+//   transition: width 0.3s, margin-left 0.3s;
+//   -webkit-transition: width 0.3s, margin-left 0.3s;
+//   -moz-transition: width 0.3s, margin-left 0.3s;
+//   -o-transition: width 0.3s, margin-left 0.3s;
+// }
 
-._definition-open {
-  transform: translateX(100%);
-  -webkit-transform: translateX(100%);
-  -moz-transform: translateX(100%);
-  -o-transform: translateX(100%);
-  transition: transform 0.3s;
-  -webkit-transition: transform 0.3s;
-  -moz-transition: transform 0.3s;
-  -o-transition: transform 0.3s;
-}
+// ._container-close {
+//   transition: margin-left 0.3s;
+//   -webkit-transition: margin-left 0.3s;
+//   -moz-transition: margin-left 0.3s;
+//   -o-transition: margin-left 0.3s;
+// }
 
-._definition-close {
-  transform: translateX(0);
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -o-transform: translateX(0);
-  transition: transform 0.3s;
-  -webkit-transition: transform 0.3s;
-  -moz-transition: transform 0.3s;
-  -o-transition: transform 0.3s;
-}
+// ._definition-open {
+//   transform: translateX(100%);
+//   -webkit-transform: translateX(100%);
+//   -moz-transform: translateX(100%);
+//   -o-transform: translateX(100%);
+//   transition: transform 0.3s;
+//   -webkit-transition: transform 0.3s;
+//   -moz-transition: transform 0.3s;
+//   -o-transition: transform 0.3s;
+// }
+
+// ._definition-close {
+//   transform: translateX(0);
+//   -webkit-transform: translateX(0);
+//   -moz-transform: translateX(0);
+//   -o-transform: translateX(0);
+//   transition: transform 0.3s;
+//   -webkit-transition: transform 0.3s;
+//   -moz-transition: transform 0.3s;
+//   -o-transition: transform 0.3s;
+// }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
   .sidebar-container {
     min-width: 12rem;
   }
-
 }
