support: hotfix for overhaul

--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -36,7 +36,8 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-right: 0.7rem;
+  // padding-right: 1rem;
+  padding-right: 1%;
 }
 
 .left-box {
