--- a/src/components/popover/BookSelectionPopover.scss
+++ b/src/components/popover/BookSelectionPopover.scss
@@ -1,5 +1,8 @@
 @use "../../variables" as *;
 
+// .book-tab-popover-wrapper {
+// }
+
 .book-tab-popover-container {
   background-color: rgb(255, 254, 254);
   width: fit-content;
@@ -7,14 +10,11 @@
   border-radius: 0.375rem;
   height: fit-content;
   display: flex;
-  padding: 0.8rem;
+  padding: 0.6rem;
   position: absolute;
   flex-flow: column;
   align-items: center;
-  margin-top: 0.1rem;
-  //   margin-top: 0.1rem;
-  //   visibility: hidden;
-  //   opacity: 0;
+  margin-top: 0.2rem;
 }
 
 .tab {
@@ -49,46 +49,43 @@
   overflow: auto;
   overflow-wrap: break-word;
   border: 0.375px solid lightgray;
-  margin: 0.6rem 0.2rem 0.3rem 0.2rem;
+  margin: 0.4rem 0.2rem 0.3rem 0.2rem;
   border-radius: 0.375rem;
 }
 
-.add-book-btn:hover {
-  background-color: rgb(238, 230, 223);
+.book-selection-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.add-book-icon {
+  font-size: 18px;
+}
+
+._add-book-icon {
+  font-size: 20px;
+  margin-left: 0.1rem;
+}
+
+.add-book-icon:hover {
+  color: rgb(179, 168, 149);
   cursor: pointer;
 }
 
-.add-book-btn {
-  border: 0.375px solid lightgray;
-  padding: 0 0.7rem 0.2rem 0.7rem;
-  border-radius: 0.375rem;
-}
-
-.show-book-tab-button {
-  font-weight: 500;
-  text-decoration: none;
-  //   color: rgb(168, 140, 89);
-  color: $web-font-color;
-  font-size: 15px;
-  border: 0.375px solid lightgray;
-  padding: 0.26rem 0.5rem 0.26rem 0.5rem;
-  border-radius: 0.375rem;
-  background-color: rgb(252, 250, 246);
-}
-
-.show-book-tab-button:hover {
+._add-book-icon:hover {
+  color: rgb(179, 168, 149);
   cursor: pointer;
-  background-color: rgb(235, 232, 222);
 }
 
-// .add-book-btn {
-//     font-weight: 700;
-//     text-decoration: none;
-//     color: rgb(168, 140, 89);
-//     font-size: 15px;
-//   }
+.book-icon:hover {
+  cursor: pointer;
+  color: rgb(192, 181, 161);
+}
 
-//   .add-book-btn:hover {
-//     color: rgb(219, 212, 190);
-//     cursor: pointer;
-//   }
+.book-icon {
+  font-size: 22px;
+  color: rgb(94, 92, 89);
+}
