--- a/src/pages/Layout.scss
+++ b/src/pages/Layout.scss
@@ -2,7 +2,7 @@
   /* border: 1px solid black; */
   /* position: sticky; */
   top: 0;
-  height: 142.5px;
+  height: fit-content;
   z-index: 3;
 }
 
@@ -15,13 +15,13 @@
 
 .mainest {
   /* border: 1px solid red; */
-  /* height: 100%; */
+  height: 100vh;
   width: 100%;
   position: sticky;
   overflow: hidden;
   /* overflow-y: scroll; */
   /* z-index: -2; */
-  /* border: 4px solid #ddd; */
+  // border: 4px solid #ddd;
 }
 
 /* body {
