--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -13,21 +13,30 @@ input:focus {
   /* border: 2px solid #719ece;
   box-shadow: 0 0 1px #719ece; */
   outline: rgb(238, 230, 223) 3px solid;
-  border-color: rgb(238, 230, 223);
-  box-shadow: none;
-  border-radius: 0.375rem;
   -webkit-outline: rgb(238, 230, 223) 3px solid;
-  -webkit-border-color: rgb(238, 230, 223);
-  -webkit-box-shadow: none;
-  -webkit-border-radius: 0.375rem;
   -moz-outline: rgb(238, 230, 223) 3px solid;
-  -moz-border-color: rgb(238, 230, 223);
-  -moz-box-shadow: none;
-  -moz-border-radius: 0.375rem;
   -o-outline: rgb(238, 230, 223) 3px solid;
+  border-color: rgb(238, 230, 223);
+  -webkit-border-color: rgb(238, 230, 223);
+  -moz-border-color: rgb(238, 230, 223);
   -o-border-color: rgb(238, 230, 223);
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
   -o-box-shadow: none;
+  border-radius: 0.375rem;
   -o-border-radius: 0.375rem;
+  -webkit-border-radius: 0.375rem;
+  -moz-border-radius: 0.375rem;
+
+  -webkit-outline-radius: 0.375rem;
+  -moz-outline-radius: 0.375rem;
+  -o-outline-radius: 0.375rem;
+}
+
+.input:not([type="checkbox"]):focus {
+  -webkit-border-radius: 0;
+  border-radius: 0;
 }
 
 .dropdown-list {
