--- a/src/pages/Layout.scss
+++ b/src/pages/Layout.scss
@@ -1,26 +1,28 @@
 .all-navbar {
   /* border: 1px solid black; */
   /* position: sticky; */
-  top: 0;
+  // top: 0;
   height: fit-content;
   z-index: 3;
 }
 
 .outlet {
-  /* border: 1px solid orange; */
+  // border: 1px solid orange;
   /* position: sticky; */
-  top: calc(100% - 142.5px);
+  // top: calc(100% - 142.5px);
   /* z-index: -1; */
+  // border: 1px solid red;
+  width: 100%;
+  height: 100%;
 }
 
 .mainest {
   /* border: 1px solid red; */
   height: 100vh;
   width: 100%;
-  position: sticky;
-  overflow: hidden;
+  // position: sticky;
   /* overflow-y: scroll; */
-  /* z-index: -2; */
+  overflow: hidden;
   // border: 4px solid #ddd;
 }
 
