--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -2,38 +2,37 @@
 
 .main-container {
   display: flex;
-  max-width: 100%;
-  // height: 100vh;
-}
-
-.right-main-box {
-  display: flex;
   width: 100%;
-  // flex-flow: column;
-  // align-items: center;
+  height: calc(100% - 142.5px);
 }
 
-.sidebar-container {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  border-right: 0.375px solid lightgray;
-  min-width: 17rem;
-  width: fit-content;
-  position: absolute;
-  /* width: 0; */
-  /* z-index: 1; */
-  /* left: 0; */
-  /* overflow-x: hidden; */
-  transition: transform 0.3s;
-  transform: translateX(-100%);
-}
+// .right-main-box {
+//   display: flex;
+//   width: 100%;
+// }
+
+// .sidebar-container {
+//   display: flex;
+//   flex-flow: column;
+//   align-items: center;
+//   border-right: 0.375px solid lightgray;
+//   min-width: 17rem;
+//   width: fit-content;
+//   position: absolute;
+//   /* width: 0; */
+//   /* z-index: 1; */
+//   /* left: 0; */
+//   /* overflow-x: hidden; */
+//   transition: transform 0.3s;
+//   transform: translateX(-100%);
+// }
 
 .definition-container {
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
-
 
 // ._sidebar {
 //   transform: translateX(0);
@@ -79,7 +78,7 @@
 // }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
-  .sidebar-container {
-    min-width: 12rem;
-  }
+  // .sidebar-container {
+  //   min-width: 12rem;
+  // }
 }
