support: alternate ios input focus fix and completed post user for notion

--- a/src/components/popover/BookSelectionPopover.scss
+++ b/src/components/popover/BookSelectionPopover.scss
@@ -5,8 +5,8 @@
 
 .book-tab-popover-container {
   background-color: rgb(255, 254, 254);
-  width: fit-content;
-  min-width: 13rem;
+  width: 14rem;
+  min-width: 14rem;
   border: 0.375px solid lightgray;
   border-radius: 0.375rem;
   height: fit-content;
