--- a/src/components/popover/SignUpPopover.scss
+++ b/src/components/popover/SignUpPopover.scss
@@ -24,9 +24,25 @@
   margin-bottom: 0.2rem;
 }
 .signup-form-control:focus {
-  outline: rgb(238, 230, 223) 3px solid !important;
+  // outline: rgb(238, 230, 223) 3px solid !important;
+  // border-color: rgb(238, 230, 223) !important;
+  // box-shadow: none !important;
+
+  outline: none !important;
   border-color: rgb(238, 230, 223) !important;
-  box-shadow: none !important;
+  box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+
+  -webkit-outline: none !important;
+  -webkit-border-color: rgb(238, 230, 223) !important;
+  -webkit-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+
+  -o-outline: none !important;
+  -o-border-color: rgb(238, 230, 223) !important;
+  -o-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+
+  -moz-outline: none !important;
+  -moz-border-color: rgb(238, 230, 223) !important;
+  -moz-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
 }
 
 .signup-label {
@@ -225,7 +241,7 @@
   .right-link {
     // visibility: hidden;
     // width: 0;
-    font-size: 13px;
+    font-size: 14px;
     margin-left: 0.6rem;
   }
 
