feature: gets books based on user acc

--- a/src/components/popover/BookSelectionPopover.scss
+++ b/src/components/popover/BookSelectionPopover.scss
@@ -102,3 +102,11 @@
   margin-bottom: 0.3rem;
   color: rgb(141, 119, 78);
 }
+
+.login-for-books-words {
+  font-weight: 600;
+  color: $web-font-color;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+}
