--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,5 @@
 $web-color: rgb(219, 203, 148) !default;
 $secondary-web-color: rgb(255, 247, 232) !default;
+
 $web-font-color: rgb(168, 140, 89) !default;
+$web-default-color: rgb(82, 82, 82);
