--- a/src/components/popover/SignUpPopover.scss
+++ b/src/components/popover/SignUpPopover.scss
@@ -1,4 +1,4 @@
-@use "../../variables" as *;
+@import "../../variables.scss";
 
 .right-link {
   font-weight: 700;
@@ -22,28 +22,31 @@
   max-width: 12rem;
   margin-top: 0.3rem;
   margin-bottom: 0.2rem;
+  // color: $web-default-color !important;
 }
-.signup-form-control:focus {
-  // outline: rgb(238, 230, 223) 3px solid !important;
-  // border-color: rgb(238, 230, 223) !important;
-  // box-shadow: none !important;
 
-  outline: none !important;
-  border-color: rgb(238, 230, 223) !important;
-  box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+// TODO hahahahahahahaha
+// .signup-form-control:focus {
+// outline: rgb(238, 230, 223) 3px solid !important;
+// border-color: rgb(238, 230, 223) !important;
+// box-shadow: none !important;
 
-  -webkit-outline: none !important;
-  -webkit-border-color: rgb(238, 230, 223) !important;
-  -webkit-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+// outline: none !important;
+// border-color: rgb(238, 230, 223) !important;
+// box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
 
-  -o-outline: none !important;
-  -o-border-color: rgb(238, 230, 223) !important;
-  -o-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+// -webkit-outline: none !important;
+// -webkit-border-color: rgb(238, 230, 223) !important;
+// -webkit-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
 
-  -moz-outline: none !important;
-  -moz-border-color: rgb(238, 230, 223) !important;
-  -moz-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
-}
+// -o-outline: none !important;
+// -o-border-color: rgb(238, 230, 223) !important;
+// -o-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+
+// -moz-outline: none !important;
+// -moz-border-color: rgb(238, 230, 223) !important;
+// -moz-box-shadow: 0 0 0 2px rgb(238, 230, 223) !important;
+// }
 
 .signup-label {
   margin-bottom: 0 !important;
@@ -169,6 +172,7 @@
   width: 16px;
   font-size: 11px;
   margin-right: 0.3rem;
+  color: $secondary-web-color;
 }
 
 .verified-text {
