--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -1,3 +1,5 @@
+@import "../../variables.scss";
+
 .searchbar-box {
   margin: 0.5rem 0 0.5rem 0;
 }
@@ -7,34 +9,11 @@ input {
   padding: 0.2rem 0.5rem 0.2rem 0.6rem;
   border-radius: 0.375rem;
   width: 18rem;
+  color: $web-default-color;
   // border: 3px solid transparent;
 }
 
 input:not([type="checkbox"]):focus {
-  // outline: rgb(238, 230, 223) 3px solid;
-  // -webkit-outline: rgb(238, 230, 223) 3px solid;
-  // -moz-outline: rgb(238, 230, 223) 3px solid;
-  // -o-outline: rgb(238, 230, 223) 3px solid;
-  // // outline: none;
-  // // border: 3px solid rgb(238, 230, 223);
-  // border-color: rgb(238, 230, 223);
-  // -webkit-border-color: rgb(238, 230, 223);
-  // -moz-border-color: rgb(238, 230, 223);
-  // -o-border-color: rgb(238, 230, 223);
-  // box-shadow: none;
-  // -webkit-box-shadow: none;
-  // -moz-box-shadow: none;
-  // -o-box-shadow: none;
-  // border-radius: 0.375rem;
-  // -o-border-radius: 0.375rem;
-  // -webkit-border-radius: 0.375rem;
-  // -moz-border-radius: 0.375rem;
-
-  // outline-radius
-  // -webkit-outline-radius: 0.375rem;
-  // -moz-outline-radius: 0.375rem;
-  // -o-outline-radius: 0.375rem;
-
   outline: none;
   border-color: rgb(238, 230, 223);
   box-shadow: 0 0 0 3px rgb(238, 230, 223);
@@ -62,11 +41,13 @@ input:not([type="checkbox"]):focus {
   border-top: 0.1rem solid lightgrey;
   border-left: 0.1rem solid lightgrey;
   border-right: 0.1rem solid lightgrey;
+  // color: $web-default-color;
 }
 
 .dropdown-list:hover {
   background-color: rgb(238, 230, 223);
   cursor: pointer;
+  color: $web-default-color;
 }
 
 .dropdown-box {
