--- a/src/pages/wordPage/WordPage.scss
+++ b/src/pages/wordPage/WordPage.scss
@@ -1,4 +1,5 @@
-@use "../../variables" as *;
+// @use "../../variables" as *;
+@import "../../variables";
 
 .word-container {
   width: 100%;
@@ -36,6 +37,7 @@
   padding-bottom: 0.6rem;
   padding-left: 0.8rem;
   padding-right: 0.8rem;
+  // border: 10px solid black;
 }
 
 .no-words {
