support: started route re routing

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   // -apple-system,
-  font-family: "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans",
-    "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", "Noto Color Emoji";
+  // font-family: "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans",
+  //   "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  //   "Segoe UI Symbol", "Noto Color Emoji";
 }
