support: api cancellation when multiple api triggered quickly works

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,7 +2,7 @@
 
 // Required
 @import "../node_modules/bootstrap/scss/functions";
-@import "./variables.scss";
+@import "./SCSSVARS.scss";
 // @import "../node_modules/bootstrap/scss/variables";
 
 // Default variable overrides
