--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -34,6 +34,10 @@
   height: 100%;
 }
 
+.homepage-timer {
+  margin-top: 2rem;
+}
+
 // ._sidebar {
 //   transform: translateX(0);
 //   -webkit-transform: translateX(0);
