adjusted yearTimer, fixed Protected, add url redirect logic for word def

--- a/src/components/yearTimer/YearTimer.scss
+++ b/src/components/yearTimer/YearTimer.scss
@@ -5,6 +5,7 @@
   //   content: "\2591";
   color: rgb(218, 203, 155);
   width: fit-content;
+  font-size: 19px;
 }
 
 .timer-container {
@@ -21,4 +22,6 @@
   font-size: 14px;
   color: rgb(199, 172, 125);
   font-weight: 500;
+  // font-style: italic;
+  letter-spacing: 0.3px;
 }
