feature: more typescript refactor, refatored more css

--- a/src/SCSSVARS.scss
+++ b/src/SCSSVARS.scss
@@ -2,4 +2,6 @@ $web-color: rgb(219, 203, 148) !default;
 $secondary-web-color: rgb(255, 247, 232) !default;
 
 $web-font-color: rgb(168, 140, 89) !default;
-$web-default-color: rgb(82, 82, 82);
+$web-default-color: rgb(82, 82, 82) !default;
+
+$spinner-default-color: rgb(141, 119, 78) !default;
