--- a/src/components/modal/CreateBookModal.scss
+++ b/src/components/modal/CreateBookModal.scss
@@ -1,28 +1,35 @@
-.btn-container {
+.create-book-modal-btn-container {
   display: flex;
-  margin-top: 0.9rem;
+  margin-top: 0.6rem;
 }
 
-.cfm-btn {
+.create-book-modal-cfm-btn {
   border: 0;
   background-color: rgb(206, 192, 148);
   padding: 0.4rem 0.6rem 0.3rem 0.6rem;
   border-radius: 0.375rem;
   font-weight: 600;
   color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  height: 32px;
+  font-size: 15px;
 }
 
-.cancel-btn {
+.create-book-modal-cancel-btn {
   margin-left: 0.5rem;
   border: 0.375px lightgray solid;
   padding: 0.4rem 0.6rem 0.3rem 0.6rem;
   border-radius: 0.375rem;
   font-weight: 600;
-
   background-color: rgb(247, 247, 247);
+  display: flex;
+  align-items: center;
+  height: 32px;
+  font-size: 15px;
 }
 
-.cfm-btn:hover {
+.create-book-modal-cfm-btn:hover {
   background-color: rgb(233, 224, 194);
   cursor: pointer;
 }
@@ -31,7 +38,7 @@
   color: rgb(170, 170, 170);
 }
 
-.cancel-btn:hover {
+.create-book-modal-cancel-btn:hover {
   cursor: pointer;
   background-color: rgb(238, 230, 223);
 }
@@ -40,9 +47,11 @@
   max-width: 24rem;
 }
 
-.form-control {
+.create-book-modal-form-control {
   margin-top: 0.4rem;
   max-width: 24rem;
+  height: 32px;
+  font-size: 15px !important;
 }
 
 #form_control:focus {
